# fsoft2026_1DE_2

./: CMakeLists.txt  README.md
Documentation/Iteration02/SequenceDiagrams/: README.md
Project/: CMakeLists.txt  main.cpp
Project/headers/controllers/: Controller.h
Project/headers/dto/: AnimalInDTO.h  AnimalOutDTO.h  PrescriptionInDTO.h  PrescriptionOutDTO.h  ServiceInDTO.h  ServiceOutDTO.h  VeterinarianInDTO.h  VeterinarianOutDTO.h
Project/headers/exceptions/: DataConsistencyException.h  DuplicatedDataException.h  InvalidDataException.h  NoDataException.h
Project/headers/mappers/: AnimalMapper.h  PrescriptionMapper.h  ServiceMapper.h  VeterinarianMapper.h
Project/headers/model/: Animal.h  AnimalContainer.h  Clinic.h  Date.h  Prescription.h  PrescriptionContainer.h  Service.h  ServiceContainer.h  Time.h  Veterinarian.h  VeterinarianContainer.h
Project/headers/repo/: ClinicRepositoryBinary.h  ClinicRepositoryMemory.h  IClinicRepository.h
Project/headers/services/: AnimalCatalog.h  AnimalService.h  PrescriptionCatalog.h  PrescriptionService.h  ServiceCatalog.h  ServiceService.h  VeterinarianService.h
Project/headers/views/: AnimalView.h  PrescriptionView.h  ServiceView.h  Utils.h  VeterinarianView.h  View.h
Project/sources/controllers/: Controller.cpp
Project/sources/exceptions/: DataConsistencyException.cpp  DuplicatedDataException.cpp  InvalidDataException.cpp  NoDataException.cpp
Project/sources/mappers/: AnimalMapper.cpp  PrescriptionMapper.cpp  ServiceMapper.cpp  VeterinarianMapper.cpp
Project/sources/model/: Animal.cpp  AnimalContainer.cpp  Clinic.cpp  Date.cpp  Prescription.cpp  PrescriptionContainer.cpp  Service.cpp  ServiceContainer.cpp  Time.cpp  Veterinarian.cpp  VeterinarianContainer.cpp
Project/sources/repo/: ClinicRepositoryBinary.cpp  ClinicRepositoryMemory.cpp
Project/sources/services/: AnimalCatalog.cpp  AnimalService.cpp  PrescriptionCatalog.cpp  PrescriptionService.cpp  ServiceCatalog.cpp  ServiceService.cpp  VeterinarianService.cpp
Project/sources/views/: AnimalView.cpp  PrescriptionView.cpp  ServiceView.cpp  Utils.cpp  VeterinarianView.cpp  View.cpp
VeterinaryClinicTester/: CMakeLists.txt  animal_container_test.cpp  animal_service_test.cpp  animal_test.cpp  clinic_repository_binary_test.cpp  date_test.cpp  main.cpp  prescription_container_test.cpp  prescription_service_test.cpp  prescription_test.cpp  service_container_test.cpp  service_service_test.cpp  service_test.cpp  time_test.cpp  veterinarian_container_test.cpp  veterinarian_service_test.cpp  veterinarian_test.cpp
